LayoutTests/storage/indexeddb/resources/unblocked-version-changes.js
@@ -29,12 +29,15 @@ function onUpgradeNeeded(evt)
     preamble(evt);
     evalAndLog("db = request.result");
     shouldBe("db.version", "2");
+    evalAndLog("transaction = request.transaction");
 
     evalAndLog("request = indexedDB.open(dbname, 3)");
     request.onerror = unexpectedErrorCallback;
     request.onupgradeneeded = onUpgradeNeeded2;
     request.onsuccess = onSuccess;
 
+    evalAndLog("transaction.abort()");
+    // FIXME: Explicit db.close() call should not be necessary. http://wkbug.com/102298
     evalAndLog("db.close()");
 }
 
